--- a/html/descriptions.html
+++ b/html/descriptions.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Descriptions</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="../index.htm">Accueil</a>
+            <a href="#">Descriptions</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
 </body>
 </html>
