--- a/html/contact.html
+++ b/html/contact.html
@@ -9,10 +9,14 @@
 <body>
     <header>
         <nav>
-            <a href="../index.html">Accueil</a>
-            <a href="descriptions.html">Descriptions</a>
-            <a href="#">Contact</a>
+            <img src="/images/logo.png" alt="Logo" class="logo">
+            <div class="nav-links">
+                <a href="../index.html">Accueil</a>
+                <a href="descriptions.html">Descriptions</a>
+                <a href="#">Contact</a>
+            </div>
         </nav>
     </header>
+
 </body>
 </html>
