--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
     <header>
         <nav>
-            <img src="/images/logo.png" alt="Logo" class="logo"> <!-- Logo aligné en haut -->
-            <div class="nav-links"> <!-- Conteneur pour les liens -->
-                <a href="accueil.html">Accueil</a>
-                <a href="services.html">Services</a>
-                <a href="a-propos.html">À propos</a>
-                <a href="contact.html">Contact</a>
+            <img src="/images/logo.png" alt="Logo" class="logo">
+            <div class="nav-links">
+                <a href="#">Accueil</a>
+                <a href="/html/descriptions.html">Descriptions</a>
+                <a href="/html/contact.html">Contact</a>
             </div>
         </nav>
     </header>
