--- a/html/descriptions.html
+++ b/html/descriptions.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../favicon.ico" />
     <title>Descriptions</title>
 </head>
 <body>
@@ -17,6 +18,9 @@
             </div>
         </nav>
     </header>
-
+    
+    <footer>
+        <p>&copy; 2024 Votre Entreprise. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
