imageviewer utilise maintenant un xml

--- a/html/descriptions.html
+++ b/html/descriptions.html
@@ -20,7 +20,7 @@
     </header>
     
     <footer>
-        <p>&copy; 2024 Votre Entreprise. Tous droits réservés.</p>
+        <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
