--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Sed fringilla nisl vitae tincidunt mattis. Nam hendrerit hendrerit finibus. Maur
     </main>
 
     <footer>
-        <p>&copy; 2024 Votre Entreprise. Tous droits réservés.</p>
+        <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés.</p>
     </footer>
 </body>
 
