--- a/html/admin.html
+++ b/html/admin.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     
-    <footer></footer>
+    <footer>
         <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés.</p>
     </footer>
 </body>
