--- a/html/contact.html
+++ b/html/contact.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../favicon.ico" />
+    <link rel="stylesheet" href="../css/policies.css">
+    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/mediaQueries.css">
+    
+    <link rel="icon" href="favicon.ico" />
     <title>Contact</title>
 </head>
 <body>
@@ -18,8 +23,8 @@
             </div>
         </nav>
     </header>
-    
-    <footer></footer>
+
+    <footer>
         <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés.</p>
     </footer>
 </body>
