--- a/html/descriptions.html
+++ b/html/descriptions.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../favicon.ico" />
+    <link rel="stylesheet" href="../css/policies.css">
+    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/mediaQueries.css">
+    
+    <link rel="icon" href="favicon.ico" />
     <title>Descriptions</title>
 </head>
 <body>
