--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/policies.css">
+    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/mediaQueries.css">
+    
     <link rel="icon" href="favicon.ico" />
     <title>Accueil</title>
 </head>
