--- a/html/contact.html
+++ b/html/contact.html
@@ -25,7 +25,7 @@
     </header>
 
     <footer>
-        <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés.</p>
+        <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés. <a href="/php/administration.php">Administration</a></p>
     </footer>
 </body>
 </html>
