--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/policies.css">
     <link rel="stylesheet" href="../css/form.css">
     <link rel="stylesheet" href="../css/mediaQueries.css">
-    
+
     <link rel="icon" href="favicon.ico" />
     <title>Accueil</title>
 </head>
@@ -61,9 +61,10 @@ Sed fringilla nisl vitae tincidunt mattis. Nam hendrerit hendrerit finibus. Maur
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés.</p>
-    </footer>
+<footer>
+    <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés. <a href="/php/administration.php">Administration</a></p>
+</footer>
+
 </body>
 
 <script src="../js/imageViewer.js"></script>
