Changement de la navbar et du footer

--- a/html/contact.html
+++ b/html/contact.html
@@ -14,18 +14,17 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="/images/logo.png" alt="Logo" class="logo">
-            <div class="nav-links">
-                <a href="../index.html">Accueil</a>
-                <a href="descriptions.html">Descriptions</a>
-                <a href="#">Contact</a>
-            </div>
+        <nav class="topnav">
+            <a href="../index.html">Accueil</a>
+            <a href="/html/descriptions.html">Descriptions</a>
+            <a class="active" href="#">Contact</a>
         </nav>
     </header>
-
+    
     <footer>
-        <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés. <a href="/php/administration.php">Administration</a></p>
+        <div class="footer-text">&copy; 2024 Quentin TAULEIGNE. Tous droits réservés.</div>
+        <a href="/php/administration.php" class="footer-link">Administration</a>
     </footer>
+
 </body>
 </html>
