--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="/images/logo.png" alt="Logo" class="logo">
-            <div class="nav-links">
-                <a href="#">Accueil</a>
-                <a href="/html/descriptions.html">Descriptions</a>
-                <a href="/html/contact.html">Contact</a>
-            </div>
+        <nav class="topnav">
+            <a class="active" href="#">Accueil</a>
+            <a href="/html/descriptions.html">Descriptions</a>
+            <a href="/html/contact.html">Contact</a>
         </nav>
     </header>
 
@@ -61,13 +58,14 @@ Sed fringilla nisl vitae tincidunt mattis. Nam hendrerit hendrerit finibus. Maur
         </section>
     </main>
 
-<footer>
-    <p>&copy; 2024 Quentin TAULEIGNE. Tous droits réservés. <a href="/php/administration.php">Administration</a></p>
-</footer>
+
+    <footer>
+        <div class="footer-text">&copy; 2024 Quentin TAULEIGNE. Tous droits réservés.</div>
+        <a href="/php/administration.php" class="footer-link">Administration</a>
+    </footer>
 
 </body>
 
 <script src="../js/imageViewer.js"></script>
-
 
 </html>
