Implémentation du burgerMenu dans les autres pages

--- a/index.html
+++ b/index.html
@@ -74,19 +74,7 @@
 
 </body>
 
-
 <script src="../js/imageViewer.js"></script>
-
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-    const burger = document.querySelector('.burger');
-    const nav = document.querySelector('.nav-center');
-
-    burger.addEventListener('click', function () {
-        nav.classList.toggle('active'); // Ajoute/enlève la classe active
-    });
-});
-</script>
-    
+<script src="../js/burgerMenu.js"></script>    
 
 </html>
