--- a/html/descriptions.html
+++ b/html/descriptions.html
@@ -15,9 +15,16 @@
 <body>
     <header>
         <nav class="topnav">
-            <a href="../index.html">Accueil</a>
-            <a class="active" href="#">Descriptions</a>
-            <a href="./contact.html">Contact</a>
+            <div class="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="nav-center">
+                <a href="../index.html">Accueil</a>
+                <a class="active" href="#">Descriptions</a>
+                <a href="/html/contact.html">Contact</a>
+            </div>
         </nav>
     </header>
     
@@ -27,4 +34,7 @@
     </footer>
     
 </body>
+
+<script src="../js/burgerMenu.js"></script> 
+
 </html>
